kubernetes/apps/monitoring/domoticz/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: domoticz
spec:
  type: ExternalName
  externalIPs: ["192.168.2.40"]
  # externalName: lnx-srv01.explorer
